Replace profession filter widget with dropdown

--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -2926,3 +2926,16 @@ input[type=time] {
         object-position: center bottom;
     }
 }
+
+.custom-dropdown-alternative {
+    position: relative;
+    display: inline-block;
+}
+
+.custom-dropdown-alternative .dropdown-toggle:hover {
+    color: var(--primary);
+}
+
+.custom-dropdown-alternative .dropdown-options li:hover {
+    background-color: var(--primary);
+}
