--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -1212,6 +1212,73 @@ input[type=file]::file-selector-button:hover {
     }
 }
 
+.pagination-marketplace {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: var(--text);
+
+    &.small-a {
+        width: 30px;
+        height: 30px;
+        padding: 4px;
+    }
+
+
+    &.active {
+        background-color: var(--lila);
+        color: white;
+    }
+}
+
+.pagination-marketplace-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: var(--onbackground);
+    margin: 5px;
+    transition: all 0.3s ease-in-out;
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        pointer-events: none;
+    }
+    &.small-a {
+        width: 30px;
+        height: 30px;
+        font-size: 16px;
+        padding: 4px;
+    }
+
+    &:hover:not(.active) {
+        transform: translateY(-4px);
+        box-shadow: 0 4px 0 0 var(--lila);
+        color: var(--lila);
+    }
+
+    &.active {
+        transform: translateY(-4px);
+        border: 1px solid var(--background);
+        box-shadow: 0 4px 0 0 var(--lila);
+        color: var(--background);
+        background-color: var(--lila);
+    }
+}
+
 /*-------------------SWITCH -----------------------------------*/
 .switch-button {
     display: flex;
