Fix admin left column

--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -637,7 +637,9 @@
     border-radius: var(--border-radius);
     transform: translateY(-4px);
     box-shadow: -3px 5px 0 0 var(--lighttext);
-
+    &.admin-box{
+        height: auto;
+    }
     & .worker {
         height: 400px;
     }
