--- a/services/src/main/resources/templates/comment-template_en.html
+++ b/services/src/main/resources/templates/comment-template_en.html
@@ -154,7 +154,7 @@
                                             <td class="pad"
                                                 style="padding-bottom:25px;padding-left:20px;padding-right:20px;padding-top:10px;">
                                                 <div style="color:#2f2f2f;font-family:Georgia,Times,'Times New Roman',serif;font-size:42px;line-height:120%;text-align:center;mso-line-height-alt:50.4px;">
-                                                    <p style="margin: 0;" th:text="'Hey, ' + ${name} + '!'"></p>
+                                                    <p style="margin: 0;" th:text="#{hello.message(${name})}"></p>
                                                 </div>
                                             </td>
                                         </tr>
@@ -168,7 +168,7 @@
                                                 <div style="color:#2f2f2f;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;line-height:150%;text-align:left;mso-line-height-alt:24px;">
                                                     <p style="margin: 0; word-break: break-word;">&nbsp;</p>
                                                     <p style="margin: 0;"
-                                                       th:text="'There is a new comment on ' + ${postTitle} + '!'"></p>
+                                                       th:text="#{new.comment.message(${postTitle})}"></p>
                                                 </div>
                                             </td>
                                         </tr>
@@ -202,8 +202,7 @@
                                                 style="padding-left: 20px; padding-right: 20px; padding-top: 40px; text-align: center;">
                                                 <!-- Add text-align: center; -->
                                                 <div style="color: #2f2f2f; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 16px; letter-spacing: 0px; line-height: 150%; text-align: center; mso-line-height-alt: 24px;">
-                                                    <p style="margin: 0; word-break: break-word;"><strong><span>Click the button below to see the comment!<br></span></strong>
-                                                    </p>
+                                                    <p style="margin: 0; word-break: break-word;" th:text="#{click.button.comment}"></p>
                                                 </div>
                                             </td>
                                         </tr>
@@ -238,7 +237,7 @@
                                                             style="padding-left:40px;padding-right:40px;font-size:14px;display:inline-block;letter-spacing:1px;"><span
                                                             style="word-break:break-word;"><span
                                                             data-mce-style
-                                                            style="line-height: 28px;">SEE COMMENT<br></span></span></span></a>
+                                                            style="line-height: 28px;" th:text="#{see.comment}"></span></span></span></a>
                                                     <!--[if mso]></center></v:textbox></v:roundrect><![endif]--></div>
                                             </td>
                                         </tr>
