--- a/services/src/main/resources/templates/request-template_en.html
+++ b/services/src/main/resources/templates/request-template_en.html
@@ -154,7 +154,7 @@
                                             <td class="pad"
                                                 style="padding-bottom: 25px; padding-left: 20px; padding-right: 20px; padding-top: 10px;">
                                                 <div style="color: #2f2f2f; font-family: Georgia, Times, 'Times New Roman', serif; font-size: 42px; line-height: 120%; text-align: center; mso-line-height-alt: 50.4px;">
-                                                    <p style="margin: 0;" th:text="'Hey, ' + ${name} + '!'"></p>
+                                                    <p style="margin: 0;" th:text="#{hello.message(${name})}"></p>
                                                 </div>
                                             </td>
                                         </tr>
@@ -166,8 +166,8 @@
                                             <td class="pad"
                                                 style="padding-bottom: 10px; padding-left: 30px; padding-right: 30px; padding-top: 10px;">
                                                 <div style="color: #2f2f2f; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 16px; line-height: 150%; text-align: left; mso-line-height-alt: 24px;">
-                                                    <p style="margin: 0;" th:text="'You have receieved a new request from ' + ${senderName} + ' ' + ${senderSurname} + ' for your product: ' + ${productName}"></p>
-                                                    <p style="margin: 0;" th:text="${senderName} + ' has left you a message: '"></p>
+                                                    <p style="margin: 0;" th:text="#{request.first.message(${senderName}, ${senderSurname}, ${productName})}"></p>
+                                                    <p style="margin: 0;" th:text="#{request.second.message(${senderName})}"></p>
                                                     <div style="font-size: 14px; background-color: #f0f0f0; padding: 10px; border: 1px solid #000; margin-top: 10px;">
                                                         <p style="margin: 0; font-size: 12px; line-height: 150%;" th:text="${message}"></p>
                                                     </div>
@@ -205,8 +205,7 @@
                                                 style="padding-left: 20px; padding-right: 20px; padding-top: 40px; text-align: center;">
                                                 <!-- Add text-align: center; -->
                                                 <div style="color: #2f2f2f; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 16px; letter-spacing: 0px; line-height: 150%; text-align: center; mso-line-height-alt: 24px;">
-                                                    <p style="margin: 0; word-break: break-word;"><strong><span>Click on the button below to see the product!<br></span></strong>
-                                                    </p>
+                                                    <p style="margin: 0; word-break: break-word;" th:text="#{click.button.product}"></p>
                                                 </div>
                                             </td>
                                         </tr>
@@ -241,7 +240,7 @@
                                                             style="padding-left:40px;padding-right:40px;font-size:14px;display:inline-block;letter-spacing:1px;"><span
                                                             style="word-break:break-word;"><span
                                                             data-mce-style
-                                                            style="line-height: 28px;">SEE PRODUCT<br></span></span></span></a>
+                                                            style="line-height: 28px;" th:text="#{see.product}"></span></span></span></a>
                                                     <!--[if mso]></center></v:textbox></v:roundrect><![endif]--></div>
                                             </td>
                                         </tr>
