--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -527,6 +527,10 @@
 }
 
 /*------------------- PLACEHOLDER -----------------------------------*/
+.textarea-min-max{
+    max-height: 150px;
+    min-height: 50px;
+}
 
 .placeholder {
     margin: 1px;
