--- a/webapp/front/front/src/app/app.component.html
+++ b/webapp/front/front/src/app/app.component.html
@@ -3,7 +3,9 @@
 <div>{{amenity.name}}</div>
 
 </div> -->
-
+<div class="cool-button">
+  hola
+</div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" style="color:white;">Amenities</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
