--- a/webapp/front/front/src/app/app.component.html
+++ b/webapp/front/front/src/app/app.component.html
@@ -1,22 +1,17 @@
 <html lang="en">
 <head>
+  <title>Neibo</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <title>Neibo</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
-  <!--<link href="${pageContext.request.contextPath}/resources/css/home.css" rel="stylesheet"/>
-  <link href="${pageContext.request.contextPath}/resources/css/commons.css" rel="stylesheet"/>
-  <link href="${pageContext.request.contextPath}/resources/css/calendarWidget.css" rel="stylesheet"/>
-  <link rel="icon" href="${pageContext.request.contextPath}/resources/images/logo.ico">-->
 </head>
 
 <body class="">
-
 
 <div style=" position: absolute; width: 100%; height: 100%; top:0; left:0; z-index: 1">
   <div class="w-100">
@@ -71,7 +66,8 @@
 
   </div>
 
-<!--  <%@ include file="/WEB-INF/jsp/components/displays/navbar.jsp" %>-->
+  <app-navbar></app-navbar>
+
   <div class="container">
 
     <div class="row init">
@@ -88,7 +84,30 @@
           </c:forEach>-->
         </div>
         <div id="actual-posts-container">
-          <!--<c:choose>
+          <ng-container *ngIf="postList && postList.length > 0; else noPostsFound">
+            <!-- Include the page selector -->
+
+            <div *ngFor="let post of postList">
+              {{post.postId}}
+              <blogpost
+                [postID]="post.postId"
+                [postNeighborMail]="post.user.mail"
+                [postDate]="post.date"
+                [postTitle]="post.title"
+                [postDescription]="post.description"
+                [postImage]="post.postPicture.imageId"
+                [postLikes]="post.likes.length"
+              ></blogpost>
+            </div>
+
+          </ng-container>
+          <ng-template #noPostsFound>
+            <div class="no-posts-found">
+              <i class="circle-icon fa-solid fa-magnifying-glass" style="color: var(--text)"></i>
+              <span>Posts not found</span>
+            </div>
+          </ng-template>
+         <!-- <c:choose>
             <c:when test="${empty postList}">
               <div class="no-posts-found">
                 <i class="circle-icon fa-solid fa-magnifying-glass" style="color:var(&#45;&#45;text)"></i>
