--- a/webapp/front/front/src/assets/styles/commons.css
+++ b/webapp/front/front/src/assets/styles/commons.css
@@ -34,67 +34,67 @@ body {
 
 
 :root {
-    --text: #4f5248;
-    --lighttext: #83887f;
-    --lightertext: #9ca194;
-    --background: #faf6e8;
-    --onbackground: rgb(243, 243, 235);
-    --onbackgroundfaded: rgb(245, 245, 244, 0.2);
-    --darkonbackground: rgb(235, 236, 233);
-    --primary: #328d3d;
-    --between-primary: #709a58;
-    --onprimary: #fdfaf1;
-    --old-primary: #9ad379;
-    --secondary: #d8d8c5;
-    --accent: #6696e2;
-    --error: #de6f6f;
-    --scrollbarthumb: #004F2D;
-    --bordercolor: #dadad0;
-    --admin-color: #578a66;
-    --always-background: #faf6e8;
-    --on-onbackground: rgb(238, 236, 231);
-    --green: #328d3d;
-    --light-green: #9ad379;
-    --star-background: #dedad4;
-    --star-active: #ff9c1a;
-    --lila: #7d7ae3;
-    --to-lila: #dfdfea;
-    --used: #5975d0;
-    --new: #6cb945;
+    --text: #4f5248 !important;
+    --lighttext: #83887f !important;
+    --lightertext: #9ca194 !important;
+    --background: #faf6e8 !important;
+    --onbackground: rgb(243, 243, 235) !important;
+    --onbackgroundfaded: rgb(245, 245, 244, 0.2) !important;
+    --darkonbackground: rgb(235, 236, 233) !important;
+    --primary: #328d3d !important;
+    --between-primary: #709a58 !important;
+    --onprimary: #fdfaf1 !important;
+    --old-primary: #9ad379 !important;
+    --secondary: #d8d8c5 !important;
+    --accent: #6696e2 !important;
+    --error: #de6f6f !important;
+    --scrollbarthumb: #004F2D !important;
+    --bordercolor: #dadad0 !important;
+    --admin-color: #578a66 !important;
+    --always-background: #faf6e8 !important;
+    --on-onbackground: rgb(238, 236, 231) !important;
+    --green: #328d3d !important;
+    --light-green: #9ad379 !important;
+    --star-background: #dedad4 !important;
+    --star-active: #ff9c1a !important;
+    --lila: #7d7ae3 !important;
+    --to-lila: #dfdfea !important;
+    --used: #5975d0 !important;
+    --new: #6cb945 !important;
 
-    --border-light: 5px;
-    --border-radius: 10px;
-    --border-hard: 50px;
-    --border: 1px solid var(--primary);
-    --input-height: 35px;
+    --border-light: 5px !important;
+    --border-radius: 10px !important;
+    --border-hard: 50px !important;
+    --border: 1px solid var(--primary) !important;
+    --input-height: 35px !important;
 }
 
 .dark-mode {
-    --text: #ced3c1;
-    --lighttext: #b1bbab;
-    --lightertext: #878f82;
-    --background: #454c52;
-    --onbackground: rgb(59, 64, 70);
-    --onbackgroundfaded: rgba(49, 58, 63, 0.1);
-    --darkonbackground: #4b4f4f;
-    --primary: #8fbd79;
-    --onprimary: #29333a;
-    --between-primary: #187736;
-    --old-primary: #1ba446;
-    --secondary: #595953;
-    --accent: #6696e2;
-    --error: #de6f6f;
-    --scrollbarthumb: #9a968c;
-    --bordercolor: #646462;
-    --admin-color: #8bcb9d;
-    --always-background: #faf6e8;
-    --on-onbackground: rgb(63, 68, 75);
-    --green: #1b6926;
-    --light-green: #9ad379;
-    --star-background: #4b4f4f;
-    --star-active: #ff9c1a;
-    --lila: #7d7ae3;
-    --to-lila: rgb(72, 78, 89);
+    --text: #ced3c1 !important;
+    --lighttext: #b1bbab !important;
+    --lightertext: #878f82 !important;
+    --background: #454c52 !important;
+    --onbackground: rgb(59, 64, 70) !important;
+    --onbackgroundfaded: rgba(49, 58, 63, 0.1) !important;
+    --darkonbackground: #4b4f4f !important;
+    --primary: #8fbd79 !important;
+    --onprimary: #29333a !important;
+    --between-primary: #187736 !important;
+    --old-primary: #1ba446 !important;
+    --secondary: #595953 !important;
+    --accent: #6696e2 !important;
+    --error: #de6f6f !important;
+    --scrollbarthumb: #9a968c !important;
+    --bordercolor: #646462 !important;
+    --admin-color: #8bcb9d !important;
+    --always-background: #faf6e8 !important;
+    --on-onbackground: rgb(63, 68, 75) !important;
+    --green: #1b6926 !important;
+    --light-green: #9ad379 !important;
+    --star-background: #4b4f4f !important;
+    --star-active: #ff9c1a !important;
+    --lila: #7d7ae3 !important;
+    --to-lila: rgb(72, 78, 89) !important;
 
 }
 
