Add wave footer for dynamic Experiáns

--- a/webapp/front/front/src/app/app.component.html
+++ b/webapp/front/front/src/app/app.component.html
@@ -77,7 +77,6 @@
 
       <div class="column-middle">
         <app-upper-feed-buttons></app-upper-feed-buttons>
-<!--        <%@ include file="/WEB-INF/jsp/components/widgets/upperFeedButtons.jsp" %>-->
 
         <div id="placeholder-posts-container">
           <!--<c:forEach begin="1" end="10" var="index">
@@ -172,7 +171,7 @@
           integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
           crossorigin="anonymous"></script>
 
-  <!--<%@ include file="/WEB-INF/jsp/components/displays/footer.jsp" %>-->
+  <app-wave-footer></app-wave-footer>
 </div>
 
 </body>
