Add post url and tags url

--- a/webapp/front/front/src/assets/styles/commons.css
+++ b/webapp/front/front/src/assets/styles/commons.css
@@ -133,7 +133,7 @@ html {
 
 a {
     color: inherit; /* Inherit the color from the parent element */
-    text-decoration: none; /* Remove underlines */
+    text-decoration: none !important; /* Remove underlines */
 }
 
 a:hover {
