--- a/webapp/front/front/src/app/app.component.html
+++ b/webapp/front/front/src/app/app.component.html
@@ -89,12 +89,7 @@
 
             <div *ngFor="let post of postList">
               <blogpost
-                [postID]="post.postId"
-                [postNeighborMail]="post.user.mail"
-                [postDate]="post.date"
-                [postTitle]="post.title"
-                [postDescription]="post.description"
-                [postLikes]="post.likes.length"
+                [post]="post"
               ></blogpost>
             </div>
 
