--- a/webapp/front/front/src/app/components/blogpost/blogpost.component.html
+++ b/webapp/front/front/src/app/components/blogpost/blogpost.component.html
@@ -9,8 +9,7 @@
                     </span>
           <span class="like-count c-light-text" id="like-count-${param.postID}"
                 data-like-count="${param.postLikes}">
-            {{postLikes}}
-                        <!--<c:out value="${param.postLikes}"/>-->
+            {{post?.likes?.length}}
                     </span>
 
 
@@ -18,8 +17,9 @@
       </div>
       <div class="col-md-11 pt-3 pb-3 pr-3 col-md-push-11">
         <!--${pageContext.request.contextPath}/posts/<c:out value="${param.postID}" />-->
-        <a href=""
-        style="text-decoration: none;">
+        <a
+          [href]="generatePostUrl(post?.postId)"
+          style="text-decoration: none;">
         <div class="post-header">
           <div class="blogpost-author-and-date">
             <div class="f-r-s-c placeholder-glow" style="gap: 3px">
@@ -38,24 +38,31 @@
                   getImageInto("postUserProfilePictureId-${param.postID}", ${empty param.postUserProfilePictureId ? 0 : param.postUserProfilePictureId}, "${pageContext.request.contextPath}");
                 })();
               </script>-->
-              <span class="post-author pt-1 pb-1 pl-1">{{postNeighborMail}}<!--<c:out value="${param.postNeighborMail}"/>--></span>
+
+              <span class="post-author pt-1 pb-1 pl-1">{{post?.user?.mail}}<!--<c:out value="${param.postNeighborMail}"/>--></span>
 
             </div>
 
             <div style="font-size: 12px;color: var(--lighttext);">
-              <!--<spring:message code="posted"/>-->
+              <span i18n>posted</span>
+              <!--<span class="post-date" data-post-date="{{post?.date}}"></span>-->
 
-              <!--<span class="post-date" data-post-date="{{postDate}}">
-              </span>-->
-              <!--<span class="post-date" data-post-date="<c:out value="${param.postDate}"/>">
-              </span>-->
             </div>
 
           </div>
-          <h1 class="post-title">{{postTitle}}<!--<c:out value="${param.postTitle}"/>--></h1>
+          <h1 class="post-title">{{post?.title}}<!--<c:out value="${param.postTitle}"/>--></h1>
         </div>
-        <p class="post-description mb-2">{{postDescription}}<!--<c:out value="${param.postDescription}"/>--></p>
-        <!--<c:if test="${not empty param.postImage }">
+        <p class="post-description mb-2">{{post?.description}}<!--<c:out value="${param.postDescription}"/>--></p>
+
+         <!-- <div *ngIf="postImage">
+            <div style="display: flex; justify-content: center; align-items: center;">
+              <img class="blogpost-image"
+                   src="getImagePath(postImage)"
+                   alt="post_{{ postID }}_img"/>
+            </div>
+          </div>-->
+
+          <!--<c:if test="${not empty param.postImage }">
           <div style="display: flex; justify-content: center; align-items: center;">
             <img class="blogpost-image"
                  src="${pageContext.request.contextPath}/images/<c:out value="${param.postImage}"/>"
@@ -65,7 +72,17 @@
 
         </a>
         <div class="mt-2 d-flex flex-row justify-content-start align-items-center flex-wrap">
-         <!-- <c:forEach var="postTag" items="${requestScope.postTags}">
+
+          <!-- Assuming postTags is an array property in your component -->
+          <ng-container *ngFor="let tag of post?.tags">
+            <a [href]="generateTagUrl(tag.tag)"
+               class="post-tag static m-l-3 m-r-3"
+               >
+              {{ tag.tag }}
+            </a>
+          </ng-container>
+
+          <!--<c:forEach var="postTag" items="${requestScope.postTags}">
             <a href="${pageContext.request.contextPath}${contextPath}?tag=${postTag.tag}"
                class="post-tag static m-l-3 m-r-3" data-post-tag="${postTag.tag}">
               <c:out value="${postTag.tag}"/>
