Start with routing

--- a/webapp/front/front/src/app/app.component.html
+++ b/webapp/front/front/src/app/app.component.html
@@ -78,7 +78,7 @@
       <div class="column-middle">
         <app-upper-feed-buttons></app-upper-feed-buttons>
 
-        <app-feed></app-feed>
+        <router-outlet></router-outlet>
         
       </div>
 
