Add routerLink example in Blogpost Component
In line 21 of ht ehtml file. Also check out an example of how to handle te url params in post.component.ts.

--- a/webapp/front/front/src/app/components/blogpost/blogpost.component.html
+++ b/webapp/front/front/src/app/components/blogpost/blogpost.component.html
@@ -18,7 +18,7 @@
       <div class="col-md-11 pt-3 pb-3 pr-3 col-md-push-11">
         <!--${pageContext.request.contextPath}/posts/<c:out value="${param.postID}" />-->
         <a
-          [href]="generatePostUrl(post?.postId)"
+          [routerLink]="['/post', post?.postId]"
           style="text-decoration: none;">
         <div class="post-header">
           <div class="blogpost-author-and-date">
