--- a/webapp/front/front/src/app/components/left-column/left-column.component.html
+++ b/webapp/front/front/src/app/components/left-column/left-column.component.html
@@ -61,13 +61,13 @@
               <span i18n>Marketplace</span>
 
             </a>
-            <a id="servicesButton" routerLink="/services"
+            <a id="servicesButton" routerLink="services"
                class="cool-left-button ${channel == 'Services' ? 'active' : ''} f-r-sb-c">
               <i class="fa-solid fa-handshake-angle"></i>
               <span i18n>Services</span>
 
             </a>
-            <a id="reservationsButton" routerLink="/reservations"
+            <a id="reservationsButton" routerLink="reservations"
                class="cool-left-button ${channel == 'Reservations' ? 'active' : ''} f-r-sb-c">
               <i class="fas fa-calendar-days"></i>
               <span i18n>Reservations</span>
