--- a/webapp/front/front/src/app/components/post/post.component.html
+++ b/webapp/front/front/src/app/components/post/post.component.html
@@ -7,7 +7,7 @@
         <div class="f-r-sb-c ">
           <div>
             <span style="font-size: 14px" class="font-weight-bold" i18n>
-                POST CHANNEL
+                {{post.channel}}
             </span>
             <span style="font-size: 12px; font-weight: normal" class="ml-1 placeholder-glow">
                         -
