Complete dynamic home page

--- a/webapp/front/front/src/app/components/left-column/left-column.component.html
+++ b/webapp/front/front/src/app/components/left-column/left-column.component.html
@@ -28,59 +28,53 @@
       <c:otherwise>-->
         <div class="left-box">
           <div class="f-c-c-c first">
-            <!--<c:if test='${loggedUser.role == "ADMINISTRATOR"}'>
-              <a href="${pageContext.request.contextPath}/admin/publish"
-                 class="cool-left-button admin-button f-r-sb-c">
-                <i class="fa-solid fa-chart-pie"></i>
-                <spring:message code="Admin.panel"/>
-              </a>
-              <div class="divider"></div>
-            </c:if>-->
             <a id="announcementsButton" routerLink="/" [queryParams]="{channel: 'Announcements'}"
-               class="cool-left-button f-r-sb-c">
+               class="cool-left-button f-r-sb-c"
+               [ngClass]="{ 'active': channelClass == 'Announcements' }">
               <i class="fas fa-bullhorn"></i>
               <span i18n>Announcements</span>
             </a>
             <a id="feedButton" routerLink="/"
-               class="cool-left-button  ${channel == 'Feed' ? 'active' : ''} f-r-sb-c">
+               class="cool-left-button  f-r-sb-c"
+               [ngClass]="{ 'active': channelClass == 'Feed' }">
               <i class="fas fa-comments"></i>
               <span i18n>Feed</span>
             </a>
             <a id="complaintsButton" routerLink="/" [queryParams]="{channel: 'Complaints'}"
-               class="cool-left-button ${channel == 'Complaints' ? 'active' : ''} f-r-sb-c">
+               class="cool-left-button f-r-sb-c"
+               [ngClass]="{ 'active': channelClass == 'Complaints' }">
               <i class="fas fa-envelope"></i>
               <span i18n>Complaints</span>
-
             </a>
-          </div>
-          <div class="f-c-c-c second">
+        </div>
+        <div class="f-c-c-c second">
             <div class="divider"></div>
-            <a id="marketplaceButton" routerLink="marketplace"
-               class="cool-left-button lila ${channel == 'Marketplace' ? 'active' : ''} f-r-sb-c">
+            <a id="marketplaceButton" routerLink="/marketplace"
+               class="cool-left-button lila f-r-sb-c"
+               [ngClass]="{ 'active': channelClass == 'Marketplace' }">
               <i class="fa-solid fa-store"></i>
               <span i18n>Marketplace</span>
-
             </a>
-            <a id="servicesButton" routerLink="services"
-               class="cool-left-button ${channel == 'Services' ? 'active' : ''} f-r-sb-c">
+            <a id="servicesButton" routerLink="/services"
+               class="cool-left-button f-r-sb-c"
+               [ngClass]="{ 'active': channelClass == 'Services' }">
               <i class="fa-solid fa-handshake-angle"></i>
               <span i18n>Services</span>
-
             </a>
-            <a id="reservationsButton" routerLink="reservations"
-               class="cool-left-button ${channel == 'Reservations' ? 'active' : ''} f-r-sb-c">
+            <a id="reservationsButton" routerLink="/reservations"
+               class="cool-left-button f-r-sb-c"
+               [ngClass]="{ 'active': channelClass == 'Reservations' }">
               <i class="fas fa-calendar-days"></i>
               <span i18n>Reservations</span>
-
             </a>
             <a id="informationButton" routerLink="/information"
-               class="cool-left-button ${channel == 'Information' ? 'active' : ''} f-r-sb-c">
+               class="cool-left-button f-r-sb-c"
+               [ngClass]="{ 'active': channelClass == 'Information' }">
               <i class="fa-solid fa-circle-info"></i>
               <span i18n>Information</span>
-
             </a>
-
-          </div>
+        </div>
+        
         </div>
 
       <!--</c:otherwise>
