--- a/webapp/front/front/src/app/components/reservations/reservations.component.html
+++ b/webapp/front/front/src/app/components/reservations/reservations.component.html
@@ -1,1 +1,19 @@
-<p>reservations works!</p>
+<div class="container">
+
+    <div class="row init">
+      <div class="column-left">
+        <app-left-column></app-left-column>
+      </div>
+
+      <div class="column-middle">
+        <p>reservations works!</p>
+      </div>
+
+      <div class="column-right">
+
+        <!--<%@ include file="/WEB-INF/jsp/components/displays/rightColumn.jsp" %>-->
+      </div>
+
+
+    </div>
+  </div>
