--- a/webapp/front/front/src/app/components/upper-feed-buttons/upper-feed-buttons.component.html
+++ b/webapp/front/front/src/app/components/upper-feed-buttons/upper-feed-buttons.component.html
@@ -1,23 +1,30 @@
 
 <!--<c:if test="${channel != 'Announcements'}">-->
   <div class="upper-feed-buttons-box  ">
-    <div class="f-r-s-c filters g-05" >
-      <a onclick="newestPosts()"
-         class="cool-feed-button  rounded ${(param.postStatus == 'none' || param.postStatus eq null) ? 'active' : ''}  ">
+    <div class="f-r-s-c filters g-05">
+      <a routerLink="/" [queryParams]="{ postStatus: 'none' }"
+        class="cool-feed-button rounded"
+        [ngClass]="{ 'active': postStatus == 'none' }">
         <i class="fa-solid fa-arrow-up-wide-short"></i>
         <span i18n>Newest</span>
       </a>
-      <a onclick="trendingPosts()"
-         class="cool-feed-button  rounded ${param.postStatus == 'trending' ? 'active' : ''}  ">
+    
+      <a routerLink="/" [queryParams]="{ postStatus: 'trending' }"
+        class="cool-feed-button rounded"
+        [ngClass]="{ 'active': postStatus == 'trending' }">
         <i class="fa-solid fa-arrow-trend-up ml-1"></i>
         <span i18n>Trending</span>
       </a>
-      <a onclick="hotPosts()" class="coolest-button  ${param.postStatus == 'hot' ? 'active' : ''}">
+    
+      <a routerLink="/" [queryParams]="{ postStatus: 'hot' }"
+        class="coolest-button"
+        [ngClass]="{ 'active': postStatus == 'hot' }">
         <i class="fa-solid fa-fire ml-1"></i>
         <span i18n>Hot</span>
       </a>
-
     </div>
+    
+    
     <!--<c:if test='${loggedUser.role != "ADMINISTRATOR"}'>
       <a onclick="publishInChannel()" class="cool-feed-button p-3 ">
         <i class="fa-solid fa-plus"></i>
@@ -55,24 +62,6 @@
     // Append the form to the document and submit it
     document.body.appendChild(form);
     form.submit();
-  }
-
-  function hotPosts() {
-    const currentUrl = new URL(window.location.href);
-    currentUrl.searchParams.set('postStatus', 'hot');
-    window.location.href = currentUrl.toString();
-  }
-
-  function newestPosts(){
-    const currentUrl = new URL(window.location.href);
-    currentUrl.searchParams.set('postStatus', 'none');
-    window.location.href = currentUrl.toString();
-  }
-
-  function trendingPosts() {
-    const currentUrl = new URL(window.location.href);
-    currentUrl.searchParams.set('postStatus', 'trending');
-    window.location.href = currentUrl.toString();
   }
 
 
