--- a/webapp/front/front/src/app/modules/feed/feed.component.html
+++ b/webapp/front/front/src/app/modules/feed/feed.component.html
@@ -1,4 +1,11 @@
-<div class="container">
+
+<div style="position: absolute; width: 100%; height: 100%; top:0; left:0; z-index: 0">
+  <app-background-clouds></app-background-clouds>
+
+  <app-navbar></app-navbar>
+
+
+  <div class="container">
 
     <div class="row init">
       <div class="column-left">
@@ -90,3 +97,6 @@
 
     </div>
   </div>
+
+  <app-wave-footer></app-wave-footer>
+</div>
