--- a/webapp/front/front/src/app/modules/information/information.component.html
+++ b/webapp/front/front/src/app/modules/information/information.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="container">
 
     <div class="row init">
@@ -17,3 +19,4 @@
 
     </div>
   </div>
+<app-wave-footer></app-wave-footer>
