--- a/webapp/front/front/src/app/modules/marketplace/marketplace.component.html
+++ b/webapp/front/front/src/app/modules/marketplace/marketplace.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container">
 
     <div class="row init">
@@ -17,3 +18,4 @@
 
     </div>
   </div>
+<app-wave-footer></app-wave-footer>
