--- a/webapp/front/front/src/app/modules/services/services.component.html
+++ b/webapp/front/front/src/app/modules/services/services.component.html
@@ -1,3 +1,6 @@
+
+<app-navbar></app-navbar>
+
 <div class="container">
 
     <div class="row init">
@@ -16,4 +19,5 @@
 
 
     </div>
-  </div>
+</div>
+<app-wave-footer></app-wave-footer>
